--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f67b76">  <td>19/03/05 16:32:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_EDCStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@c038203]">&gt;&gt;BrowserInit</td> 
-<td>&nbsp;</td>  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>19/03/05 16:33:13</td>   <td>21231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_EDCStudyExecutionClass.eCRFDataExtraction()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@c038203]">eCRFDataExtraction</td> 
-  <td>main@1007603019</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 11:16:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_EDCStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@5b275dab]">&gt;&gt;BrowserInit</td> 
+<td>&nbsp;</td>  <td>main@507084503</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 11:16:49</td>   <td>11827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_EDCStudyExecutionClass.eCRFDataExtraction()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@5b275dab]">eCRFDataExtraction</td> 
+  <td>main@507084503</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 11:19:29</td>   <td>171480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Clinion_EDCStudyExecutionClass.closebrowser()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@5b275dab]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td>  <td>main@507084503</td>   <td></td> </tr>
 </table>
