--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\bablu.p\AppData\Local\Temp\testng-eclipse--949793368\testng-customsuite.xml</span>
+                    <span>C:\Users\bablu.p\AppData\Local\Temp\testng-eclipse-2140961521\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Clinion_Execution.Clinion_EDCStudyExecutionClass" hash-for-method="eCRFDataExtraction">eCRFDataExtraction</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Clinion_Execution.Clinion_CDMStudyExecutionClass" hash-for-method="eCRFDataExtractionClinion3Point1">eCRFDataExtractionClinion3Point1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -119,14 +119,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Clinion_Execution.Clinion_EDCStudyExecutionClass</span>
+              <span class="class-name">Clinion_Execution.Clinion_CDMStudyExecutionClass</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="eCRFDataExtraction">
-                  </a> <!-- eCRFDataExtraction -->
-                  <span class="method-name">eCRFDataExtraction</span>
+                  <a name="eCRFDataExtractionClinion3Point1">
+                  </a> <!-- eCRFDataExtractionClinion3Point1 -->
+                  <span class="method-name">eCRFDataExtractionClinion3Point1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\bablu.p\AppData\Local\Temp\testng-eclipse--949793368\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\bablu.p\AppData\Local\Temp\testng-eclipse-2140961521\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +143,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Clinion_Execution.Clinion_EDCStudyExecutionClass&quot;/&gt;
+      &lt;class name=&quot;Clinion_Execution.Clinion_CDMStudyExecutionClass&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,14 +185,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'eCRFDataExtraction')
-data.setCell(0, 2, 'Clinion_Execution.Clinion_EDCStudyExecutionClass')
-data.setCell(0, 3, 159627);
+data.setCell(0, 1, 'eCRFDataExtractionClinion3Point1')
+data.setCell(0, 2, 'Clinion_Execution.Clinion_CDMStudyExecutionClass')
+data.setCell(0, 3, 37325);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 37 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -207,16 +207,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">Clinion_Execution.Clinion_EDCStudyExecutionClass</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">forgotpassword_Methd</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -225,18 +218,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Clinion_Execution.Clinion_EDCStudyExecutionClass</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Clinion_Execution.Clinion_CDMStudyExecutionClass</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">BrowserInit</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">eCRFDataExtraction</span>
-                <span class="method-start">11828 ms</span>
+                <span class="method-name">eCRFDataExtractionClinion3Point1</span>
+                <span class="method-start">11966 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closebrowser</span>
-                <span class="method-start">171480 ms</span>
+                <span class="method-start">49293 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
