--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97c064">  <td>19/03/07 11:16:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_EDCStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@5b275dab]">&gt;&gt;BrowserInit</td> 
+<tr bgcolor="97c064">  <td>19/03/07 13:59:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_CDMStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@5b275dab]">&gt;&gt;BrowserInit</td> 
 <td>&nbsp;</td>  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/03/07 11:19:29</td>   <td>171480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Clinion_EDCStudyExecutionClass.closebrowser()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@5b275dab]">&lt;&lt;closebrowser</td> 
+<tr bgcolor="97c064">  <td>19/03/07 14:00:23</td>   <td>49293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Clinion_CDMStudyExecutionClass.closebrowser()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@5b275dab]">&lt;&lt;closebrowser</td> 
 <td>&nbsp;</td>  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/03/07 11:16:49</td>   <td>11827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_EDCStudyExecutionClass.eCRFDataExtraction()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@5b275dab]">eCRFDataExtraction</td> 
+<tr bgcolor="97c064">  <td>19/03/07 13:59:46</td>   <td>11965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_CDMStudyExecutionClass.eCRFDataExtractionClinion3Point1()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@5b275dab]">eCRFDataExtractionClinion3Point1</td> 
   <td>main@507084503</td>   <td></td> </tr>
 </table>
