--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e7986">  <td>19/03/05 17:57:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_EDCStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@18be83e4]">&gt;&gt;BrowserInit</td> 
-<td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="7e7986">  <td>19/03/05 17:57:50</td>   <td>7957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_EDCStudyExecutionClass.eCRFDataExtraction()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@18be83e4]">eCRFDataExtraction</td> 
-  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="c7c2a6">  <td>19/03/07 17:20:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_EDCStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@3532ec19]">&gt;&gt;BrowserInit</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:26:07</td>   <td>329495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_CDMStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&gt;&gt;BrowserInit</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:26:45</td>   <td>366955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_CDMStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&gt;&gt;BrowserInit</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:27:23</td>   <td>405192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_CDMStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&gt;&gt;BrowserInit</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:29:32</td>   <td>534270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_CDMStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&gt;&gt;BrowserInit</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:31:41</td>   <td>663501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_CDMStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&gt;&gt;BrowserInit</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:33:50</td>   <td>792440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Clinion_CDMStudyExecutionClass.BrowserInit()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&gt;&gt;BrowserInit</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="c7c2a6">  <td>19/03/07 17:26:06</td>   <td>328334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Clinion_EDCStudyExecutionClass.closebrowser()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@3532ec19]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:26:44</td>   <td>366037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Clinion_CDMStudyExecutionClass.closebrowser()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:27:22</td>   <td>404277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Clinion_CDMStudyExecutionClass.closebrowser()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:29:31</td>   <td>533388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Clinion_CDMStudyExecutionClass.closebrowser()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:31:41</td>   <td>662611</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Clinion_CDMStudyExecutionClass.closebrowser()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:33:49</td>   <td>791462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Clinion_CDMStudyExecutionClass.closebrowser()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:35:59</td>   <td>920988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Clinion_CDMStudyExecutionClass.closebrowser()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="c7c2a6">  <td>19/03/07 17:20:43</td>   <td>5306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_EDCStudyExecutionClass.eCRFDataExtraction()[pri:0, instance:Clinion_Execution.Clinion_EDCStudyExecutionClass@3532ec19]">eCRFDataExtraction</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:27:27</td>   <td>409195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_CDMStudyExecutionClass.eCRFDataExtractionClinion3Point1DashBORD()[pri:2, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">eCRFDataExtractionClinion3Point1DashBORD</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:29:36</td>   <td>538476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_CDMStudyExecutionClass.eCRFDataExtractionClinion3Point1Editcheck()[pri:3, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">eCRFDataExtractionClinion3Point1Editcheck</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:26:49</td>   <td>370926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_CDMStudyExecutionClass.eCRFDataExtractionClinion3Point1PageWise()[pri:1, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">eCRFDataExtractionClinion3Point1PageWise</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:26:13</td>   <td>334599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_CDMStudyExecutionClass.eCRFDataExtractionClinion3Point1PanelWise()[pri:0, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">eCRFDataExtractionClinion3Point1PanelWise</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:31:45</td>   <td>667503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_CDMStudyExecutionClass.eCRFDataExtractionClinion3Point1PerSubjt()[pri:4, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">eCRFDataExtractionClinion3Point1PerSubjt</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/03/07 17:33:55</td>   <td>796784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Clinion_CDMStudyExecutionClass.eCRFDataExtractionClinion3Point1PerVisit()[pri:4, instance:Clinion_Execution.Clinion_CDMStudyExecutionClass@68c4039c]">eCRFDataExtractionClinion3Point1PerVisit</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
 </table>
