--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,34 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Clinion_Execution.Clinion_CDMStudyExecutionClass</td>
+<td>Clinion_Execution.Clinion_CRFdataExtractionExecutionClassClinion3Point1</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>eCRFDataExtractionClinion3Point1</td>
+<td>eCRFDataExtractionClinion3Point1DashBORD</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>eCRFDataExtractionClinion3Point1PageWise</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>eCRFDataExtractionClinion3Point1Editcheck</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>eCRFDataExtractionClinion3Point1PanelWise</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>eCRFDataExtractionClinion3Point1PerSubjt</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>eCRFDataExtractionClinion3Point1PerVisit</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
